# hdct

./: .gitignore  Cargo.toml  README.md
epochtime/: Cargo.toml
epochtime/src/: main.rs
hdct_helpers/: Cargo.toml
hdct_helpers/src/: clipboard_helper.rs  lib.rs
nu/: Cargo.toml
nu/src/: main.rs
src/: clap_opts.rs  main.rs
src/commands/: epochtime_command.rs  mod.rs  test_command.rs  uuid_command.rs
src/helpers/: clipboard_helper.rs
uuidgen/: Cargo.toml
uuidgen/src/: main.rs
