[package]
name = "hdct"
version = "0.1.0"
authors = ["Nathan Blair <nathan.blair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.2"
clipboard = "0.5.0"
uuid = { version = "0.8", features = ["v4"] }
